--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@ body{
     justify-content: space-between;
     height: 50px;
     align-items: center;
-    text-transform: ;
+    /* text-transform: ; */
 }
 .menu{
     height: inherit;
@@ -164,10 +164,29 @@ body{
 .experience-imageContainer{
     margin: 0;
 }
+.experience-image-pm{
+    width: 380px;
+    height: 250px;
+    object-fit: cover;
+    margin: 0 0 0 50px;
+}
+.experience-image-PM{
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+    margin: 0 0 0 140px;
+}
 .experience-image{
-    width: 480px;
+    width: 380px;
     height: 200px;
     object-fit: cover;
+    margin: 0 0 0 50px
+}
+.experience-image-wd{
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
+    margin: 0 0 0 120px;
 }
 
 .experience-detail{
@@ -184,12 +203,15 @@ body{
     background-color: #0E3150 ;
     color: white;
     border: 1px solid #0E3150;
-    padding: 5px 20px;
+    /* padding: 5px 20px; */
     border-radius: 5px;
     width: 100px;
     text-transform: uppercase;
-    margin: 0 auto;
-    
+    margin: 0 auto;       
+}
+.experience-button a{
+    text-decoration: none;
+    color: white;
 }
 .skills{
     display: flex;
