--- a/Web-development/css/estilos.css
+++ b/Web-development/css/estilos.css
@@ -9,6 +9,7 @@ html {
     height: 50px;
     align-items: center;
     border-bottom: 1px solid #707070;
+    flex-wrap: wrap;
 }
 .menu{
     height: inherit;
@@ -41,6 +42,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .hero-sentence{
     text-align: center;    
@@ -61,28 +63,28 @@ html {
 }
 .experience-container {
     border: 1px solid #FFC0C2;
-    width: 900px;
+    max-width: 900px;
     height: 300px;
     margin: 30px auto;    
 }
 .experince-sentence{
-    width: 850px;
+    max-width: 850px;
     /* height: 150px; */
     padding: 0 35px;    
 }
 .experience-image{
     margin: 0 0 0 300px;
 }
-.contact{
+/* .contact{
     background-color: #0E3150;
-}
+} */
 .contact h2{
-    color: white;
-    padding: 20px 0 0 0;
+    color: #0E3150;
 }
 .form-and-social{
     display: flex;
     justify-content: space-between;
+    /* flex-wrap: wrap; */
 }
 .social{
     display: flex;
@@ -97,7 +99,7 @@ html {
     margin: 0 10px;
 }
 .social-link.gmail{
-    background-image: url('../Images/gmail.svg');
+    background-image: url('../images/gmail.svg');
 }
 .social-link.linkedin{
     background-image: url('../images/linkedin.svg');
@@ -110,7 +112,7 @@ html {
     background-size: 40px 40px;
 }
 .social-link.cv{
-    background-color: #FFC0C2;
+    background-color: #0E3150;
     color: #FFFFFE;
     text-align: center;
     text-decoration: none;
@@ -127,27 +129,20 @@ html {
     height: 40px;
     display: flex;
 }
-.name-container label{
-    color: white;
-}
 .email-container{
     width: 400px;
     margin: 0 0 0 50px;
     height: 40px;
     display: flex;
 }
-.email-container label{
-    color: white;
-}
 .message-container{
     width: 400px;
     margin: 0 0 0 50px;
-    height: 200px;
+    height: 230px;
     display: flex;
 }
 .message-container label{
     width: 130px;
-    color: white;
 }
 .input-name{
     border-radius: 5px;
@@ -173,12 +168,14 @@ html {
     float: right;    
 }
 .form-email{
-    display: flex;    
+    display: flex;
+    /* margin: 100px 0 10px 0px; */
     justify-content: flex-start;
     align-content: space-between;
+    flex-wrap: wrap;
 }
 .contact-button{
-    background: #FFC0C2;
+    background: #0E3150;
     color: #FFFFFE;
     border-radius: 5px;
     width: 150px;
@@ -187,12 +184,11 @@ html {
     text-transform: uppercase;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 18px;
-    margin: 260px 0 0 30px;
-
+    margin: 0 0 0 30px;
 }
 .container{
-    width: 70vw;
-    max-width: 1000px;
+    /* width: 70vw; */
+    max-width: 1200px;
     margin: 0 auto;
     display: inherit;
     justify-content: inherit;
@@ -200,4 +196,145 @@ html {
     height: inherit;
     font-weight: ;
     flex-wrap: inherit;
+}
+@media screen and (max-width: 1024px){
+    .contact-button {
+        margin: 0 0 0 230px;
+    }
+    .hero {
+        height: auto;   
+        position: relative;   
+        overflow: hidden;
+        padding: 2em;  
+    }
+    .hero-image {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+    }
+    h1 {
+        font-size: 2em;
+        z-index: 2;
+        position: relative;
+    }
+    .experience-container{
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .header {
+        display: block;
+        height: auto;
+    }
+    .header ol{
+        display: block;
+    }
+    .header ol li {
+        height: 50px;        
+    }
+    .header a {
+        justify-content: center;
+    }
+    .header .logo{
+        text-align: center;
+    }
+    .experience-image{
+        margin: 0 auto;
+    }
+    .social {
+        flex-direction: column;
+    }
+    .social-link {
+        width: 2.5em;
+        height: 2.5em;
+        margin: .5em;
+    }   
+    .contact{
+        font-size: 16px;
+    }
+    .contact h2{
+        font-size: 1em;
+    }
+    .name-container label{
+        font-size: .8em;
+    }
+    .email-container label{
+        font-size: .8em;
+    }
+    .message-container label{
+        font-size: .8em;
+    }
+    .form-email {
+        font-size: 16px;
+    }
+    .contact-button {
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width:480px){
+    .hero-sentence{
+        font-size: 1.5em;
+        text-align: initial;
+    }
+    .experience-container{
+        font-size: 16px;
+    }
+    
+    .experience-container p{
+        font-size: .8em;
+    }
+    .experience-container figure{
+        margin: 0 4em;        
+    }
+    .name-container label{
+        width: 7em;
+    }
+    .email-container label{
+        width: 7em;
+    }
+    .message-container label{
+        width: 7em;
+    }
+    .name-container {
+        width: 75%;
+        margin: 0;
+    }
+    .email-container {
+        width: 75%;
+        margin: 0;
+    }
+    .message-container {
+        width: 75%;
+        margin: 0;
+    }
+    .contact-button {
+        margin: 0 auto;
+    }
+    .form-email {
+        max-width: 75%;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .input-name {
+        padding: 0;
+    }
+    .input-email {
+        padding: 0;
+    }
+    .input-message {
+        padding: 0;
+    }
+    .hero-sentence {
+        font-size: 1.2em;        
+    }
+    .hero{
+        padding: 2em 1em;
+    }
 }
