--- a/Product-manager/css/estilos.css
+++ b/Product-manager/css/estilos.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?bic415');
+    src:  url('../fonts/icomoon.eot?bic415#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?bic415') format('truetype'),
+      url('../fonts/icomoon.woff?bic415') format('woff'),
+      url('../fonts/icomoon.svg?bic415#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-menu:before {
+    content: "\e900";
+  }
+
 html {    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -102,19 +133,25 @@ h3{
     width: 500px;
     padding: 0 30px 0 15px;
 }
+.contact{
+    background-color: #F7E9E3;
+}
 .contact h2{
     color: #0E3150;
 }
 .form-and-social{
     display: flex;
     justify-content: space-between;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
+}
+.form-and-social p{
+    width: 50%;
 }
 .social{
     display: flex;
     /* justify-content: space-between; */
    align-self: baseline; 
-   /* padding: 40px 0px; */
+   padding: 0 4em 0 0;
 }
 .social-link{
     width: 40px;
@@ -143,7 +180,7 @@ h3{
     border-radius: 90px;
     align-self: flex-start;
 }
-.form-email label{
+/* .form-email label{
     width: 150px;
     margin: 10px 0;
 }
@@ -194,7 +231,7 @@ h3{
 .form-email{
     display: flex;
     /* margin: 100px 0 10px 0px; */
-    justify-content: flex-start;
+    /* justify-content: flex-start;
     align-content: space-between;
     flex-wrap: wrap;
 }
@@ -210,7 +247,7 @@ h3{
     font-size: 18px;
     margin: 0 0 0 30px;
 
-}
+} */ 
 .container{
     /* width: 70vw; */
     max-width: 1200px;
@@ -221,12 +258,28 @@ h3{
     height: inherit;
     font-weight: ;
     flex-wrap: inherit;
+    flex: 1;
+}
+
+.burger-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(247, 233, 227, 1);
+    display: none;
+    line-height: 40px;
+    text-align: center;
+    position: fixed;
+    z-index: 4;
+    left: 5px;
+    top: 5px;
+    color: #0E3150;    
 }
 
 @media screen and (max-width: 1024px){
-    .contact-button {
+    /* .contact-button {
         margin: 0 0 0 230px;
-    }
+    } */
     .hero {
         height: auto;   
         position: relative;   
@@ -268,6 +321,13 @@ h3{
 }
 
 @media screen and (max-width: 767px){
+    .burger-button{
+        display: block;
+    }
+
+    h2 {
+        font-size: 1.2em;
+    }
     .header {
         display: block;
         height: auto;
@@ -280,9 +340,30 @@ h3{
     }
     .header a {
         justify-content: center;
+        height: 40px;
+        font-size: 1.5em;
+        text-decoration: underline;
+        margin-bottom: .5em;
     }
     .header .logo{
         text-align: center;
+    }
+    .menu{
+        position: fixed;
+        background-color: rgba(247, 233, 227, .9);
+        z-index: 3;
+        top: 0;
+        left: -100vw;
+        bottom: 0;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s;
+    }
+
+    .menu.is-active {
+        left: 0;
     }
     .sentence-img-container{
         display: block;
@@ -297,7 +378,9 @@ h3{
         margin: 0 8em;
     }
     .social {
-        flex-direction: column;
+        /* flex-direction: column; */
+        padding: 0;
+        margin: 0 auto;
     }
     .social-link {
         width: 2.5em;
@@ -307,10 +390,14 @@ h3{
     .contact{
         font-size: 16px;
     }
-    .contact h2{
-        font-size: 1em;
+    .form-and-social p{
+        width: 100vw;
+        font-size: .9em;
     }
-    .name-container label{
+    /* .contact h2{
+        font-size: 1em;
+    } */
+    /* .name-container label{
         font-size: .8em;
     }
     .email-container label{
@@ -324,7 +411,7 @@ h3{
     }
     .contact-button {
         font-size: 1em;
-    }
+    } */
 }
 
 @media screen and (max-width: 480px){
@@ -347,7 +434,7 @@ h3{
     .sentence-img-container figure{
         margin: 0 4em;
     }
-    .name-container label{
+    /* .name-container label{
         width: 7em;
     }
     .email-container label{
@@ -374,9 +461,6 @@ h3{
     .form-email {
         max-width: 75%;
     }
-}
-
-@media screen and (max-width: 320px){
     .input-name {
         padding: 0;
     }
@@ -385,7 +469,19 @@ h3{
     }
     .input-message {
         padding: 0;
+    } */
+}
+
+@media screen and (max-width: 320px){
+    /* .input-name {
+        padding: 0;
     }
+    .input-email {
+        padding: 0;
+    }
+    .input-message {
+        padding: 0;
+    } */
     .hero-sentence {
         font-size: 1.2em;        
     }
