--- a/Project-manager/css/estilos.css
+++ b/Project-manager/css/estilos.css
@@ -4,6 +4,37 @@
     padding: 0;
 } */
 
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?bic415');
+    src:  url('../fonts/icomoon.eot?bic415#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?bic415') format('truetype'),
+      url('../fonts/icomoon.woff?bic415') format('woff'),
+      url('../fonts/icomoon.svg?bic415#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-menu:before {
+    content: "\e900";
+  }
+
 html {
     /* font-size: 62.5%; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -104,22 +135,26 @@ html {
     padding: 0 70px 0 10px;
     margin: 0;
 }
-/* .contact{
-    background-color: #0E3150;
-} */
+.contact{
+    background-color: #F7E9E3;
+}
+
 .contact h2{
     color: #0E3150;
 }
 .form-and-social{
     display: flex;
     justify-content: space-between;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
+}
+.form-and-social p{
+    width: 50%;
 }
 .social{
     display: flex;
     /* justify-content: space-between; */
    align-self: baseline; 
-   /* padding: 40px 0px; */
+   padding: 0 4em 0 0;
 }
 .social-link{
     width: 40px;
@@ -148,7 +183,7 @@ html {
     border-radius: 90px;
     align-self: flex-start;
 }
-.form-email label{
+/* .form-email label{
     width: 150px;
     margin: 10px 0;
 }
@@ -199,7 +234,7 @@ html {
 .form-email{
     display: flex;
     /* margin: 100px 0 10px 0px; */
-    justify-content: flex-start;
+    /* justify-content: flex-start;
     align-content: space-between;
     flex-wrap: wrap;
 }
@@ -215,10 +250,11 @@ html {
     font-size: 18px;
     margin: 0 0 0 30px;
 
-}
+} */ 
 .container{
     /* width: 70vw; */
     max-width: 1200px;
+    flex: 1;
     margin: 0 auto;
     display: inherit;
     justify-content: inherit;
@@ -228,11 +264,26 @@ html {
     flex-wrap: inherit;
 }
 
+.burger-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(247, 233, 227, 1);
+    display: none;
+    line-height: 40px;
+    text-align: center;
+    position: fixed;
+    z-index: 4;
+    left: 5px;
+    top: 5px;
+    color: #0E3150;    
+}
+
 
 @media screen and (max-width: 1024px) {
-    .contact-button {
+    /* .contact-button {
         margin: 0 0 0 230px;
-    }
+    } */
     .hero {
         height: auto;   
         position: relative;   
@@ -267,6 +318,28 @@ html {
 }
 
 @media screen and (max-width: 767px) {
+    h2 {
+        font-size: 1.2em;
+    }
+    .burger-button{
+        display: block;
+    }
+    .menu{
+        position: fixed;
+        background-color: rgba(247, 233, 227, .9);
+        z-index: 3;
+        top: 0;
+        left: -100vw;
+        bottom: 0;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s;
+    }
+    .menu.is-active {
+        left: 0;
+    }
     .header {
         display: block;
         height: auto;
@@ -279,6 +352,10 @@ html {
     }
     .header a {
         justify-content: center;
+        height: 40px;
+        font-size: 1.5em;
+        text-decoration: underline;
+        margin-bottom: .5em;
     }
     .header .logo{
         text-align: center;
@@ -300,7 +377,9 @@ html {
         margin: 0 8em;        
     }
     .social {
-        flex-direction: column;
+        /* flex-direction: column; */
+        padding: 0;
+        margin: 0 auto;
     }
     .social-link {
         width: 2.5em;
@@ -309,6 +388,10 @@ html {
     }   
     .contact{
         font-size: 16px;
+    }
+    .form-and-social p{
+        width: 100vw;
+        font-size: .9em;
     }
     .contact h2{
         font-size: 1em;
@@ -374,12 +457,6 @@ html {
     .form-email {
         max-width: 75%;
     }
-}
-
-@media screen and (max-width: 320px) {
-    /* .skills {
-        margin: 0 5%;
-    } */
     .input-name {
         padding: 0;
     }
@@ -389,6 +466,21 @@ html {
     .input-message {
         padding: 0;
     }
+}
+
+@media screen and (max-width: 320px) {
+    /* .skills {
+        margin: 0 5%;
+    } */
+    /* .input-name {
+        padding: 0;
+    }
+    .input-email {
+        padding: 0;
+    }
+    .input-message {
+        padding: 0;
+    } */
     .hero-sentence {
         font-size: 1.2em;        
     }
