--- a/Web-development/css/estilos.css
+++ b/Web-development/css/estilos.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../fonts/icomoon.eot?bic415');
+    src:  url('../fonts/icomoon.eot?bic415#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?bic415') format('truetype'),
+      url('../fonts/icomoon.woff?bic415') format('woff'),
+      url('../fonts/icomoon.svg?bic415#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-menu:before {
+    content: "\e900";
+  }
+
 html {    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -75,22 +106,26 @@ html {
 .experience-image{
     margin: 0 0 0 300px;
 }
-/* .contact{
-    background-color: #0E3150;
-} */
+.contact{
+    background-color: #F7E9E3;
+}
+
 .contact h2{
     color: #0E3150;
 }
 .form-and-social{
     display: flex;
     justify-content: space-between;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
+}
+.form-and-social p{
+    width: 50%;
 }
 .social{
     display: flex;
     /* justify-content: space-between; */
    align-self: baseline; 
-   /* padding: 40px 0px; */
+   padding: 0 4em 0 0;
 }
 .social-link{
     width: 40px;
@@ -119,7 +154,7 @@ html {
     border-radius: 90px;
     align-self: flex-start;
 }
-.form-email label{
+/* .form-email label{
     width: 150px;
     margin: 10px 0;
 }
@@ -170,7 +205,7 @@ html {
 .form-email{
     display: flex;
     /* margin: 100px 0 10px 0px; */
-    justify-content: flex-start;
+    /* justify-content: flex-start;
     align-content: space-between;
     flex-wrap: wrap;
 }
@@ -185,11 +220,12 @@ html {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 18px;
     margin: 0 0 0 30px;
-}
+} */ 
 .container{
     /* width: 70vw; */
     max-width: 1200px;
     margin: 0 auto;
+    flex: 1;
     display: inherit;
     justify-content: inherit;
     align-items: inherit;
@@ -197,10 +233,26 @@ html {
     font-weight: ;
     flex-wrap: inherit;
 }
+
+.burger-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(247, 233, 227, 1);
+    display: none;
+    line-height: 40px;
+    text-align: center;
+    position: fixed;
+    z-index: 4;
+    left: 5px;
+    top: 5px;
+    color: #0E3150;    
+}
+
 @media screen and (max-width: 1024px){
-    .contact-button {
+    /* .contact-button {
         margin: 0 0 0 230px;
-    }
+    } */
     .hero {
         height: auto;   
         position: relative;   
@@ -227,6 +279,12 @@ html {
 }
 
 @media screen and (max-width: 767px){
+    h2 {
+        font-size: 1.2em;
+    }
+    .burger-button{
+        display: block;
+    }
     .header {
         display: block;
         height: auto;
@@ -239,6 +297,27 @@ html {
     }
     .header a {
         justify-content: center;
+        height: 40px;
+        font-size: 1.5em;
+        text-decoration: underline;
+        margin-bottom: .5em;
+    }
+    .menu{
+        position: fixed;
+        background-color: rgba(247, 233, 227, .9);
+        z-index: 3;
+        top: 0;
+        left: -100vw;
+        bottom: 0;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: .3s;
+    }
+
+    .menu.is-active {
+        left: 0;
     }
     .header .logo{
         text-align: center;
@@ -247,7 +326,9 @@ html {
         margin: 0 auto;
     }
     .social {
-        flex-direction: column;
+        /* flex-direction: column; */
+        padding: 0;
+        margin: 0 auto;
     }
     .social-link {
         width: 2.5em;
@@ -257,9 +338,13 @@ html {
     .contact{
         font-size: 16px;
     }
-    .contact h2{
-        font-size: 1em;
+    .form-and-social p{
+        width: 100vw;
+        font-size: .9em;
     }
+    /* .contact h2{
+        font-size: 1em;
+    } */
     .name-container label{
         font-size: .8em;
     }
@@ -319,9 +404,6 @@ html {
     .form-email {
         max-width: 75%;
     }
-}
-
-@media screen and (max-width: 320px){
     .input-name {
         padding: 0;
     }
@@ -331,6 +413,18 @@ html {
     .input-message {
         padding: 0;
     }
+}
+
+@media screen and (max-width: 320px){
+    /* .input-name {
+        padding: 0;
+    }
+    .input-email {
+        padding: 0;
+    }
+    .input-message {
+        padding: 0;
+    } */
     .hero-sentence {
         font-size: 1.2em;        
     }
