--- a/Project-manager/css/estilos.css
+++ b/Project-manager/css/estilos.css
@@ -35,6 +35,12 @@
     content: "\e900";
   }
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html {
     /* font-size: 62.5%; */
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -108,12 +114,16 @@ html {
 }
 .experience-container h3{
     text-align: center;
+    padding: 10px 0;
 }
 .sentence-img-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+}
+.experience-container p{
+    margin: 0;
 }
 .experince-sentence{
     width: 500px;
