--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,6 +68,9 @@
   .icon-linkedin:before {
     content: "\eaca";
   }*/ 
+html {
+    scroll-behavior: smooth;
+}
 
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
