--- a/Project-manager/css/estilos.css
+++ b/Project-manager/css/estilos.css
@@ -96,7 +96,7 @@ html {
     font-weight: normal;
     letter-spacing: -.2px;
     width: 510px;
-    margin: 0;
+    margin: 0 auto;
 }
 .hero-imageContainer{
     margin: 0;
@@ -295,7 +295,7 @@ html {
         margin: 0 0 0 230px;
     } */
     .hero {
-        height: auto;   
+        height: 200px;   
         position: relative;   
         overflow: hidden;
         padding: 2em;  
@@ -313,6 +313,7 @@ html {
         font-size: 2em;
         z-index: 2;
         position: relative;
+        color: white;
     }
     .experience-container{
         height: 100%;
