--- a/css/estilos.css
+++ b/css/estilos.css
@@ -131,7 +131,7 @@ body{
     font-weight: normal;
     letter-spacing: -.2px;
     width: 510px;
-    margin: 0;
+    margin: 0 auto;
 }
 .hero-imageContainer{
     margin: 0;
@@ -139,6 +139,7 @@ body{
 }
 .hero-image{
     object-fit: cover;
+    border-radius: 30%;
 }
 .aboutme{
     background-color: #FFFFFE;
@@ -453,11 +454,13 @@ body{
         top: 0;
         bottom: 0;
         width: 100%;
+        border-radius: 0%;
     }
     h1 {
         font-size: 2em;
         z-index: 2;
         position: relative;
+        color: white;
     }
 
 }
