--- a/css/estilos.css
+++ b/css/estilos.css
@@ -201,6 +201,10 @@ body{
     /* line-height: 80px;
     text-align: center; */
 }
+.experience-list{   
+    background-color: #6DC9C8;
+    padding: 20px 0;    
+}
 .experience-list-title{
     background-color: #6DC9C8;
     margin: 0;
@@ -209,26 +213,30 @@ body{
     margin: 0;
     padding: 10px 0 0;
 }
-.experience-list{   
-    background-color: #6DC9C8;
-    padding: 20px 0;    
-}
+
 .experience-container{
     display: flex;
     flex-wrap: wrap;
 }
 .experience {
     margin: 1%;
-    width: 48%;
+    width: 40%;
     flex-shrink: 0;
     border-radius: 10px;
     overflow: hidden;
-    background: #F7E9E3;
+    border: 15px solid #F7E9E3;
+    /* margin: 20px 40px;
+    margin-top: -40px; */
+    background-color: white;
+    /* position: relative; */
+    padding: 20px;
+    text-align: center;
+    border-radius: 8px;
     
 }
-.experience-imageContainer{
+/* .experience-imageContainer{
     margin: 0;
-}
+} */
 /* .experience-image-pm{
     width: 380px;
     height: 250px;
@@ -241,12 +249,12 @@ body{
     object-fit: cover;
     margin: 0 0 0 8.7em;
 } */
-.experience-image{
+/* .experience-image{
     width: 100%;
     height: 200px;
     object-fit: cover;
     margin: 0;
-}
+} */
 /* .experience-image-wd{
     width: 250px;
     height: 200px;
@@ -254,7 +262,7 @@ body{
     margin: 0 0 0 7.5em
 } */
 
-.experience-detail{
+/* .experience-detail{
     margin: 20px 40px;
     margin-top: -40px;
     background-color: white;
@@ -262,7 +270,7 @@ body{
     padding: 20px;
     text-align: center;
     border-radius: 8px;
-}
+} */
 
 .experience-button{
     background-color: #0E3150 ;
@@ -284,10 +292,10 @@ body{
     justify-content: space-between;
     /* padding: 0 20px; */
 }
-.skills p::after {
+/* .skills p::after {
     content: "|";
     padding: 5px;
-}
+} */
 .contact h2{
     color: #0E3150;
 }
@@ -433,10 +441,14 @@ body{
 
 /* Dado que estamos usando Desktop first, se recomienda empezar por el media query más grande */
 @media screen and (max-width: 1024px){   
-    .experience-image {
+    .experience {
+        width: 87%;
+        
+    }
+    /* .experience-image {
         width: 100%;
         margin: 0;
-    }   
+    }    */
     /* .contact-button {
         margin: 0 0 0 230px;
     } */
@@ -551,12 +563,13 @@ body{
     }
     .experience {
         width: auto;
-        flex-shrink: initial;        
+        flex-shrink: initial; 
+        padding: 10px;       
     }    
-    .experience-image {
+    /* .experience-image {
         width: 100%;
         margin: 0;
-    } 
+    }  */
     .experience-detail {
         font-size: 16px;
     }
