Cambio en el segmento experiencia

--- a/Project-manager/css/estilos.css
+++ b/Project-manager/css/estilos.css
@@ -142,7 +142,7 @@ html {
     margin: 0;
     order: 1;
 }
-.experince-sentence-fleetsap{
+/* .experince-sentence-fleetsap{
     width: 500px;
     height: 230px;
     padding: 0 35px;
@@ -150,7 +150,7 @@ html {
 .experience-image-fleetsap{
     padding: 0 70px 0 10px;
     margin: 0;
-}
+} */
 .contact{
     background-color: white;
     margin-bottom: 15px;
