--- a/Product-manager/css/estilos.css
+++ b/Product-manager/css/estilos.css
@@ -307,18 +307,18 @@ h3{
     .hero-image {
         position: absolute;
         z-index: 1;
-        left: 0;
+        /* left: 0; */
         right: 0;
         top: 0;
         bottom: 0;
-        width: 100%;
-        border-radius: 0%
+        width: 50%;
+        border-radius: 20%
     }
     h1 {
         font-size: 2em;
         z-index: 2;
         position: relative;
-        color: white;
+        /* color: white; */
     }
     .experience {
         padding: 15px;
@@ -344,7 +344,7 @@ h3{
     }
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
     .burger-button{
         display: block;
     }
@@ -388,6 +388,16 @@ h3{
 
     .menu.is-active {
         left: 0;
+    }
+    h1 {
+        color: white;
+    }
+    .hero-image {
+        position: absolute;
+        left: 0;
+        width: 80%;
+        margin: 0 auto;
+        border-radius: 0%;
     }
     .sentence-img-container{
         display: block;
@@ -439,6 +449,16 @@ h3{
 }
 
 @media screen and (max-width: 480px){
+    .hero-image {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        border-radius: 0%
+    }
     .hero-sentence{
         font-size: 1.5em;
         text-align: initial;
@@ -506,6 +526,9 @@ h3{
     .input-message {
         padding: 0;
     } */
+    .hero-image {
+        height: auto;
+    }
     .hero-sentence {
         font-size: 1.2em;        
     }
